--- a/IntroduceMyself/src/main/webapp/friend.html
+++ b/IntroduceMyself/src/main/webapp/friend.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h2>친구 신청 폼</h2>
-  <form action="/friend" method="post">
+  <form action="friend" method="post">
     이름: <input type="text" name="name"><br>
     관심 분야: <input type="text" name="interest"><br>
     <input type="submit" value="신청하기">
