--- a/PhoneManagerAjax/src/main/webapp/index.html
+++ b/PhoneManagerAjax/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>휴대폰 판매 시스템</h1>
-	<a href='/PhoneManagerAjax/product/list'>휴대폰 상품 목록</a><br>
+	<a href='/PhoneManagerAjax/products.jsp'>휴대폰 상품 관리</a><br>
 	<a href='/PhoneManagerAjax/customers.jsp'>고객 관리</a><br>
 </body>
 </html>
